--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.0.0",
     "axios": "^0.19.0",
+    "css-loader": "^3.2.0",
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
     "vue": "^2.6.10",
