--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@vue/component-compiler-utils": "^3.0.0",
     "axios": "^0.19.0",
     "css-loader": "^3.2.0",
+    "node-sass": "^4.13.0",
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
+    "sass-loader": "^8.0.0",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.1",
     "vue-template-compiler": "^2.6.10",
