Add webpack config for production mode

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Short description and motivation.",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --watch",
+    "start": "webpack --config webpack.dev.js --watch",
+    "build": "webpack --config webpack.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -29,7 +30,8 @@
     "vue-loader": "^15.7.1",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9"
+    "webpack-cli": "^3.3.9",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {}
 }
