--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,9 @@ services:
     environment:
       TZ: Asia/Tokyo
       PS1: '\u@\h:\w\$$ '
-    working_dir: /usr/src/rinfo
+    working_dir: /usr/src/rsql
     volumes:
-      - .:/usr/src/rinfo
+      - .:/usr/src/rsql
       - ./vendor/bundle:/usr/local/bundle
     command: bash -c 'cd spec/dummy; rm -f tmp/pids/server.pid; rails s -b 0.0.0.0'
     ports:
