--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rinfo",
+  "name": "rsql",
   "version": "0.1.0",
   "description": "Short description and motivation.",
   "main": "index.js",
@@ -10,14 +10,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://kmdtmyk@github.com/kmdtmyk/rinfo.git"
+    "url": "git+https://kmdtmyk@github.com/kmdtmyk/rsql.git"
   },
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/kmdtmyk/rinfo/issues"
+    "url": "https://github.com/kmdtmyk/rsql/issues"
   },
-  "homepage": "https://github.com/kmdtmyk/rinfo#readme",
+  "homepage": "https://github.com/kmdtmyk/rsql#readme",
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.0.0",
     "axios": "^0.19.0",
