--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^8.0.0",
+    "terser-webpack-plugin": "^2.2.1",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.1",
     "vue-template-compiler": "^2.6.10",
