--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/kmdtmyk/rsql#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.6.3",
     "@vue/component-compiler-utils": "^3.0.0",
     "axios": "^0.19.0",
     "css-loader": "^3.2.0",
