--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/kmdtmyk/rsql#readme",
   "devDependencies": {
     "@babel/preset-env": "^7.6.3",
+    "@types/jest": "^24.0.22",
     "@vue/component-compiler-utils": "^3.0.0",
     "axios": "^0.19.0",
     "css-loader": "^3.2.0",
@@ -29,6 +30,9 @@
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^8.0.0",
     "terser-webpack-plugin": "^2.2.1",
+    "ts-jest": "^24.1.0",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.2",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.1",
     "vue-template-compiler": "^2.6.10",
