--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         ruby-version: 2.6.x
     - name: Install dependencies
-      run: sudo apt-get install libsqlite3-dev
+      run: sudo apt-get update && sudo apt-get install -y libsqlite3-dev
     - name: Build and test
       run: |
         gem install bundler
